Throw `PlatformNotSupportedException` in `netstandard1.3` - stop trying to use DCS in the JSON and XML formatters - if `UseDataContractSerializer` or `!UseXmlSerializer`:   - `CanReadType(...)` and `CanWriteType(...)` always return `false`   - `ReadFromStreamAsync(...)` and `WriteToStreamAsync(...)` always `throw` - change default XML formatter configuration to use `XmlSerializer` - adjust and disable tests in reaction - add tests of new `netstandard1.3` behavior - nits:   - correct namespace of `SerializerConsistencyTests`; was alone in previous namespace   - s/DataContractFormatter/XmlSerializerFormatter/ to reflect actual `XmlMediaTypeFormatter` test actions

--- a/src/System.Net.Http.Formatting/Properties/Resources.resx
+++ b/src/System.Net.Http.Formatting/Properties/Resources.resx
@@ -357,4 +357,10 @@
   <data name="ObjectDisposed_StreamClosed" xml:space="preserve">
     <value>Cannot access a closed stream.</value>
   </data>
+  <data name="JsonMediaTypeFormatter_DCS_NotSupported" xml:space="preserve">
+    <value>Unable to validate types on this platform when {0} is 'true'. Please reset {0} or move to a supported platform, one where the 'netstandard2.0' assembly is usable.</value>
+  </data>
+  <data name="XmlMediaTypeFormatter_DCS_NotSupported" xml:space="preserve">
+    <value>Unable to validate types on this platform when {0} is 'false'. Please set {0} or move to a supported platform, one where the 'netstandard2.0' assembly is usable.</value>
+  </data>
 </root>
